exercises/exercise1
[5] pry(main)> Brewery.create name:"BrewDog" year:2007
SyntaxError: unexpected tIDENTIFIER, expecting end-of-input
Brewery.create name:"BrewDog" year:2007
                                  ^
[5] pry(main)> Brewery.create name:"BrewDog", year:2007
   (0.1ms)  begin transaction
  SQL (0.3ms)  INSERT INTO "breweries" ("name", "year", "created_at", "updated_at") VALUES (?, ?, ?, ?)  [["name", "BrewDog"], ["year", 2007], ["created_at", "2017-01-25 18:16:33.823084"], ["updated_at", "2017-01-25 18:16:33.823084"]]
   (21.1ms)  commit transaction
=> #<Brewery:0x005588c3fdc540
 id: 5,
 name: "BrewDog",
 year: 2007,
 created_at: Wed, 25 Jan 2017 18:16:33 UTC +00:00,
 updated_at: Wed, 25 Jan 2017 18:16:33 UTC +00:00>
[6] pry(main)> bd = _
=> #<Brewery:0x005588c3fdc540
 id: 5,
 name: "BrewDog",
 year: 2007,
 created_at: Wed, 25 Jan 2017 18:16:33 UTC +00:00,
 updated_at: Wed, 25 Jan 2017 18:16:33 UTC +00:00>
[7] pry(main)> bd.beers.create name:"Punk IPA", style:"IPA"
   (0.2ms)  begin transaction
  SQL (0.2ms)  INSERT INTO "beers" ("name", "style", "brewery_id", "created_at", "updated_at") VALUES (?, ?, ?, ?, ?)  [["name", "Punk IPA"], ["style", "IPA"], ["brewery_id", 5], ["created_at", "2017-01-25 18:18:53.103293"], ["updated_at", "2017-01-25 18:18:53.103293"]]
   (18.0ms)  commit transaction
=> #<Beer:0x005588c3d82b00
 id: 16,
 name: "Punk IPA",
 style: "IPA",
 brewery_id: 5,
 created_at: Wed, 25 Jan 2017 18:18:53 UTC +00:00,
 updated_at: Wed, 25 Jan 2017 18:18:53 UTC +00:00>
[8] pry(main)> punk = _
=> #<Beer:0x005588c3d82b00
 id: 16,
 name: "Punk IPA",
 style: "IPA",
 brewery_id: 5,
 created_at: Wed, 25 Jan 2017 18:18:53 UTC +00:00,
 updated_at: Wed, 25 Jan 2017 18:18:53 UTC +00:00>
[9] pry(main)> bd.beers.create name:"Nanny State", style:"lowalcohol"
   (0.1ms)  begin transaction
  SQL (0.2ms)  INSERT INTO "beers" ("name", "style", "brewery_id", "created_at", "updated_at") VALUES (?, ?, ?, ?, ?)  [["name", "Nanny State"], ["style", "lowalcohol"], ["brewery_id", 5], ["created_at", "2017-01-25 18:19:51.947629"], ["updated_at", "2017-01-25 18:19:51.947629"]]
   (20.7ms)  commit transaction
=> #<Beer:0x005588c3bc8350
 id: 17,
 name: "Nanny State",
 style: "lowalcohol",
 brewery_id: 5,
 created_at: Wed, 25 Jan 2017 18:19:51 UTC +00:00,
 updated_at: Wed, 25 Jan 2017 18:19:51 UTC +00:00>
[10] pry(main)> nanny = _
=> #<Beer:0x005588c3bc8350
 id: 17,
 name: "Nanny State",
 style: "lowalcohol",
 brewery_id: 5,
 created_at: Wed, 25 Jan 2017 18:19:51 UTC +00:00,
 updated_at: Wed, 25 Jan 2017 18:19:51 UTC +00:00>
[11] pry(main)> punk.ratings.create score:10
   (0.1ms)  begin transaction
  SQL (0.1ms)  INSERT INTO "ratings" ("score", "beer_id", "created_at", "updated_at") VALUES (?, ?, ?, ?)  [["score", 10], ["beer_id", 16], ["created_at", "2017-01-25 18:20:51.060102"], ["updated_at", "2017-01-25 18:20:51.060102"]]
   (20.5ms)  commit transaction
=> #<Rating:0x005588c3a97198
 id: 4,
 score: 10,
 beer_id: 16,
 created_at: Wed, 25 Jan 2017 18:20:51 UTC +00:00,
 updated_at: Wed, 25 Jan 2017 18:20:51 UTC +00:00>
[12] pry(main)> punk.ratings.create score:25
   (0.1ms)  begin transaction
  SQL (0.1ms)  INSERT INTO "ratings" ("score", "beer_id", "created_at", "updated_at") VALUES (?, ?, ?, ?)  [["score", 25], ["beer_id", 16], ["created_at", "2017-01-25 18:20:55.384822"], ["updated_at", "2017-01-25 18:20:55.384822"]]
   (26.3ms)  commit transaction
=> #<Rating:0x005588c3992220
 id: 5,
 score: 25,
 beer_id: 16,
 created_at: Wed, 25 Jan 2017 18:20:55 UTC +00:00,
 updated_at: Wed, 25 Jan 2017 18:20:55 UTC +00:00>
[13] pry(main)> nanny.ratings.create score:17
   (0.1ms)  begin transaction
  SQL (0.1ms)  INSERT INTO "ratings" ("score", "beer_id", "created_at", "updated_at") VALUES (?, ?, ?, ?)  [["score", 17], ["beer_id", 17], ["created_at", "2017-01-25 18:21:34.318964"], ["updated_at", "2017-01-25 18:21:34.318964"]]
   (20.3ms)  commit transaction
=> #<Rating:0x005588c38ac8b0
 id: 6,
 score: 17,
 beer_id: 17,
 created_at: Wed, 25 Jan 2017 18:21:34 UTC +00:00,
 updated_at: Wed, 25 Jan 2017 18:21:34 UTC +00:00>
[14] pry(main)> nanny.ratings.create score:31
   (0.2ms)  begin transaction
  SQL (0.3ms)  INSERT INTO "ratings" ("score", "beer_id", "created_at", "updated_at") VALUES (?, ?, ?, ?)  [["score", 31], ["beer_id", 17], ["created_at", "2017-01-25 18:21:36.796180"], ["updated_at", "2017-01-25 18:21:36.796180"]]
   (19.7ms)  commit transaction
=> #<Rating:0x005588c37d7c78
 id: 7,
 score: 31,
 beer_id: 17,
 created_at: Wed, 25 Jan 2017 18:21:36 UTC +00:00,
 updated_at: Wed, 25 Jan 2017 18:21:36 UTC +00:00>
[15] pry(main)> nanny.ratings.create score:11
   (0.1ms)  begin transaction
  SQL (0.2ms)  INSERT INTO "ratings" ("score", "beer_id", "created_at", "updated_at") VALUES (?, ?, ?, ?)  [["score", 11], ["beer_id", 17], ["created_at", "2017-01-25 18:21:48.748744"], ["updated_at", "2017-01-25 18:21:48.748744"]]
   (19.3ms)  commit transaction
=> #<Rating:0x005588c36dc4b8
 id: 8,
 score: 11,
 beer_id: 17,
 created_at: Wed, 25 Jan 2017 18:21:48 UTC +00:00,
 updated_at: Wed, 25 Jan 2017 18:21:48 UTC +00:00>
[16] pry(main)> 
